@@ -274,7 +274,8 @@ about pipelines. </li>
 
 <ul>
  <li> A mandatory regular file named <tt>run</tt>, as well as optional files
-named <tt>finish</tt>, <tt>notification-fd</tt> and <tt>nosetsid</tt>. These
+named <tt>finish</tt>, <tt>notification-fd</tt>, <tt>timeout-kill</tt>,
+<tt>timeout-finish</tt> and <tt>nosetsid</tt>. These
 files will be copied, or recreated, in the generated
 <a href="http://skarnet.org/software/s6/servicedir.html">service directory</a>:
 they are meant to be used by the
